0.02

0.01 2022-09-02T23:15:44+02:00
 - First version.