@@ -1,4 +1,5 @@
 0.02
+ - Add alien_diag() to tests.
 
 0.01 2022-09-02T23:15:44+02:00
  - First version.
